--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "connecttosilverstock",
   "private": true,
   "scripts": {
-    "build": "npx prisma generate && remix vite:build",
+    "build": "prisma generate && prisma migrate deploy && remix vite:build",
     "dev": "shopify app dev",
     "config:link": "shopify app config link",
     "generate": "shopify app generate",
