--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "connecttosilverstock",
   "private": true,
  "scripts": {
-  "build": "prisma migrate deploy && prisma generate && remix vite:build",
+  "build": "prisma generate && prisma migrate deploy && remix vite:build",
   "dev": "shopify app dev",
   "config:link": "shopify app config link",
   "generate": "shopify app generate",
-  "deploy": "prisma migrate deploy --schema=./prisma/schema.prisma && shopify app deploy",
+  "deploy": "shopify app deploy",
   "config:use": "shopify app config use",
   "env": "shopify app env",
   "start": "remix-serve ./build/server/index.js",
   "docker-start": "npm run setup && npm run start",
-  "setup": "prisma generate && prisma migrate deploy --schema=./prisma/schema.prisma",
+  "setup": "prisma generate && prisma migrate deploy",
   "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
   "shopify": "shopify",
   "prisma": "prisma",
