--- a/package.json
+++ b/package.json
@@ -2,22 +2,23 @@
   "name": "connecttosilverstock",
   "private": true,
 "scripts": {
-  "deploy": "prisma generate && prisma migrate deploy --schema=./prisma/schema.prisma && remix vite:build",
-  "dev": "shopify app dev",
-  "config:link": "shopify app config link",
-  "generate": "shopify app generate",
-  "deploy": "prisma generate && prisma migrate deploy --schema=./prisma/schema.prisma && shopify app deploy",
-  "config:use": "shopify app config use",
-  "env": "shopify app env",
-  "start": "remix-serve ./build/server/index.js",
-  "docker-start": "npm run setup && npm run start",
-  "setup": "prisma generate && prisma migrate deploy --schema=./prisma/schema.prisma",
-  "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-  "shopify": "shopify",
-  "prisma": "prisma",
-  "graphql-codegen": "graphql-codegen",
-  "vite": "vite"
-},
+    "build": "npx prisma generate && remix vite:build",
+    "build": "prisma generate && prisma migrate deploy && remix vite:build",
+    "dev": "shopify app dev",
+    "config:link": "shopify app config link",
+    "generate": "shopify app generate",
+    "deploy": "shopify app deploy",
+    "config:use": "shopify app config use",
+    "env": "shopify app env",
+    "start": "remix-serve ./build/server/index.js",
+    "docker-start": "npm run setup && npm run start",
+    "setup": "prisma generate && prisma migrate deploy",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "shopify": "shopify",
+    "prisma": "prisma",
+    "graphql-codegen": "graphql-codegen",
+    "vite": "vite"
+  },
   "type": "module",
   "engines": {
     "node": "^18.20 || ^20.10 || >=21.0.0"
