--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "connecttosilverstock",
   "private": true,
 "scripts": {
-    "build": "remix vite:build",
+    "build": "remix vite:build && prisma generate",
     "dev": "shopify app dev",
     "config:link": "shopify app config link",
     "generate": "shopify app generate",
