--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
     "scripts": {
     "postinstall": "prisma generate && prisma migrate deploy",
-    "build": "prisma generate && remix vite:build"    "dev": "shopify app dev",
+    "build": "prisma generate && remix vite:build",
+     "dev": "shopify app dev",
     "config:link": "shopify app config link",
     "generate": "shopify app generate",
     "deploy": "shopify app deploy",
